# HyperBoundic

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  run_sanity_tests.py  update-deps
Waffine/: CMakeLists.txt  WaffineForm.cpp  WaffineForm.hpp  noise_symbol.cpp  noise_symbol.h
experiments/omp/domains/affine/: cfg.json  conds.json  diff  out_1  out_2
experiments/omp/domains/interval/: cfg.json  conds.json  out_1
experiments/omp/domains/scalar/: cfg.json  conds.json  out_2.txt
experiments/omp/friedrichs/: omp_config.json
experiments/omp/friedrichs/atomic_float_stress/: diff
experiments/omp/friedrichs/explicit_lock/: out_omp_sync.txt  out_omp_sync_1.txt  out_serial_2.txt
experiments/omp/friedrichs/explicit_lock_float_stress/: diff
experiments/omp/friedrichs/no_sync/: diff  parallel_out.txt  serial_out.txt
experiments/omp/friedrichs/noise_correctness_tests/: noise
experiments/omp/friedrichs/unsynchronized_float_stress/: diff
experiments/omp/leapfrog/: omp_config.json
experiments/omp/leapfrog/nosync/: out_omp.txt  out_serial.txt
experiments/stress/: stress_conds.json  stress_config.json
lib/: CMakeLists.txt
results/misc-timing/: out.txt  out_faster.txt  out_new.txt  out_ref.txt
results/noise-clear-threshold/: 2500-ts-1024-data.txt  2500-ts-128-data.txt  2500-ts-16-data.txt  2500-ts-2048-data.txt  2500-ts-256-data.txt  2500-ts-32-data.txt  2500-ts-4-data.txt  2500-ts-512-data.txt  2500-ts-64-data.txt  2500-ts-8-data.txt  readme.md
scripts/: quickrun  run_sanity_tests.py  run_tests  run_unit_tests  update-deps
src/: CMakeLists.txt  LaxFriedrichsSolver.cpp  LaxFriedrichsSolver.h  PdeDiscretization.cpp  PdeDiscretization.h  main.cpp
src/discretizations/: CflCheck.hpp  PdeDiscretization.hpp
src/domains/: Numeric.hpp  Real.cpp  Real.hpp
src/exe/: SimulationConfig.hpp  main.cpp
src/exe/args/: match_names.hpp
src/exe/experiment/: SimulationConfig.hpp
src/exe/experiment/generators/: generate_config_files.cpp  generate_config_files.h  generate_initial_conditions.cpp  generate_initial_conditions.hpp  generate_source_files.cpp
src/exe/io/: generate_source_files.cpp  generate_source_files.h  initial_conditions.hpp
src/flux/: CubicFlux.hpp  FluxFunction.hpp  LwrFlux.hpp  match_flux.hpp
src/io/: save_initial_conditions.hpp
src/meshes/: CflCheck.hpp  FixedSpaceMesh.hpp  RectangularMesh.hpp
src/solvers/: LaxFriedrichsSolver.hpp  LeapfrogSolver.hpp  PDESolver.hpp
src/solvers/cfl/: CflCheck.hpp  cfl_check.hpp
src/solvers/difference/: DifferenceHelpers.hpp  DifferenceSolver.hpp  LaxFriedrichsSolver.hpp  LeapfrogSolver.hpp  match_difference.hpp
src/solvers/flux/: BuckleyLeverettFlux.hpp  BurgersFlux.hpp  CubicFlux.hpp  FluxFunction.hpp  LwrFlux.hpp
src/solvers/volume/: LocalLaxFriedrichsSolver.hpp  VolumeSolver.hpp
src/visualization/: DiscretizationVisualizers.hpp  MeshVisualizer.hpp
test/: CMakeLists.txt  test_friedrichs.cpp  test_leapfrog.cpp  test_serialization.cpp
test/difference/: test_flux.cpp  test_friedrichs.cpp  test_leapfrog.cpp  test_serialization.cpp
test/viz/: visualize_friedrichs.cpp  visualize_leapfrog.cpp
test/volume/: test_local_friedrichs.cpp
