include(FetchContent)
FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# Windows compatibility
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../out/tests)
add_executable(test_friedrichs test_friedrichs.cpp)
target_link_libraries(test_friedrichs GTest::gtest_main)
add_executable(test_leapfrog test_leapfrog.cpp)
target_link_libraries(test_leapfrog GTest::gtest_main)
include(GoogleTest)

target_link_libraries(test_friedrichs lf)
target_link_libraries(test_leapfrog lf)